<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/categoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/category_name" />


        <Button
        android:id="@+id/deleteCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
            android:layout_weight="1"
        android:text="@string/delete" />

    <Button
        android:id="@+id/editCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/edit" />
    </LinearLayout>
</androidx.cardview.widget.CardView>