<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="2"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="product"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/productDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="2"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="50dp">

        <Button
            android:id="@+id/deleteProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/editProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/edit" />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>